--- a/KLS_WEB/KLS_WEB/Views/Travels/New.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/New.cshtml
@@ -13,6 +13,11 @@
     .select2-selection__rendered {
         float: left;
         font-size: 12px;
+        text-transform: uppercase;
+    }
+
+    select {
+        text-transform: uppercase;
     }
 </style>
 
@@ -183,11 +188,11 @@
                             <span>Precio Cliente</span>
                         </div>
                         <div class="d-flex flex-column">
-                            <b id="costo">0.00</b>
+                            <b id="costos">0.00</b>
                             <b id="preciocliente">0.00</b>
                         </div>
                     </div>
-                    <button class="btn btn-dark col-12 mt-4">Guardar</button>
+                    <button class="btn btn-dark col-12 mt-4 guardar">Guardar</button>
                 </div>
             </div>
         </form>
@@ -247,7 +252,7 @@
                         </div>*@
                 </form>
                 <br />
-                <button onclick="closeModal('agregarServicios');" class="btn btn-dark guardar" style="width:100%;">
+                <button onclick="closeModal('agregarServicios');" class="btn btn-dark" style="width:100%;">
                     Agregar
                 </button>
 
@@ -332,6 +337,7 @@
 
         $(".viaje").submit(function (event) {
             event.preventDefault();
+            $(".guardar").attr("disabled", true);
 
             const equipo = {
                 equipo: getEquipos()
@@ -344,19 +350,28 @@
             }
 
             let jsonData = convertJson($(".viaje"));
-            //console.log('pre', jsonData);
+            const folio = $('#folio').text();
             jsonData = { ...jsonData, ...equipo };
             jsonData = { ...jsonData, ...unidad };
-            jsonData = {...jsonData, ...servicios}
-            //console.log('post:', jsonData);
+            jsonData = { ...jsonData, ...servicios };
+            jsonData = { ...jsonData, folio };
 
-            $.post("/Travels/setTravels", jsonData, function (res) {
-                //$(location).attr('href', '/Carriers/formCarriers/' + res.id);
-                dToast("success", "Registro guardado exitosamente.", "Registrado");
-            }).fail(function (error) {
-                dToast("error", "Error al tratar de guardar el registro", "Error");
+            const serviceExists = jsonData.servicios && jsonData.unidad != '' ? true : false;
+
+            console.log('post', jsonData);
+            if (serviceExists) {
+                $.post("/Travels/setTravels", jsonData, function (res) {
+                    dToast("success", "Registro guardado exitosamente.", "Registrado");
+                    $(".guardar").attr("disabled", false);
+                    window.location.replace("@Url.Action("", "Travels")");
+                }).fail(function (error) {
+                    dToast("error", "Error al tratar de guardar el registro", "Error");
+                    $(".guardar").attr("disabled", false);
+                });
+            } else {
+                dToast("error", "LOS SERVICIOS SON OBLIGATORIOS", "Error");
                 $(".guardar").attr("disabled", false);
-            });
+            }
         });
     });
         function initSelects() {
@@ -379,6 +394,17 @@
             });
             total = parseFloat(total).toFixed(2);
             $('#preciocliente').text(total);
+        }
+
+        function setCostos() {
+            const costos = $('.costos');
+            let total = 0;
+            costos.map(index => {
+                const cantidad = Number.isNaN(Number.parseFloat(costos.eq(index).val())) ? 0 : costos.eq(index).val();
+                total += parseFloat(cantidad);
+            });
+            total = parseFloat(total).toFixed(2);
+            $('#costos').text(total);
         }
 
         function getEquipos() {
@@ -407,37 +433,47 @@
             return data;
         }
 
-        getInventario = IdTransportista => {
-            console.log(IdTransportista);
-
-            $.get("/Carriers/Inventory/getInventory/", { IdTransportista: IdTransportista }, res => {
-                console.log(res);
-                res.length > 0 ? res.map(({ id, noEconomico, modelo, placa, estatus, tipoUnidad }) => {
-                    //estatus === 1 ? $('.selectequipo').append(`<option value="${id}">${nombre}</option>`) : null : $('#chofer').append(`<option value="0">SIN OPERADORES ACTIVOS</option>`);
+        selectEquipo = (IdTransportista, IdTipoUnidad, selectid) => {
+            $.get(`/Carriers/Inventory/GetEquipos/${IdTransportista}`, ({ dataReport }) => {
+                const equipos = dataReport.filter(x => x.tipoUnidad == IdTipoUnidad);
+                $(`#equipo${selectid}`).empty();
+                if (equipos.length > 0) {
+                    equipos.map(({ id, marca, modelo, placa }) => {
+                        $(`#equipo${selectid}`).append(`<option value="${id}">${marca}, ${modelo}. PLACA: ${placa}</option>"`);
+                    });
+                } else {
+                    $(`#equipo${selectid}`).append(`<option value="0">No existen unidades activas</option>"`);
                 }
-                //dSelect('chofer');
+            });
+        }
+
+        getInventario = (IdTransportista, elementId) => {
+            $.get(`/Carriers/Inventory/GetEquipos/${IdTransportista}`, res => {
+                const { unidades } = res;
+                if (unidades.length > 0) {
+                    unidades.map(({ tipoUnidad, nombre }) => {
+                        $(`#unidad${elementId}`).append(`<option value="${tipoUnidad}">${nombre[0]}</option>"`);
+                    });
+                    selectEquipo(IdTransportista, unidades[0].tipoUnidad, elementId);
+                } else {
+                    $('.selectunidad').append(`<option value="0">No existen unidades activas</option>"`);
+                    $('.selecUrlequipo').append(`<option value="0">No existen equipos activos</option>"`);
+                }
             });
         };
 
         function addEquipo(servicio, element) {
             const boton = jQuery(element);
             const idtransportista = $('#transportista').val();
+            const elementid = $('.equipocontainer').children().length;
             $('.equipocontainer').attr('rel', idtransportista);
             boton.remove();
 
             const equipo = `<div class="d-flex justify-content-between equipo mt-2">
-                <select class="form-control form-control-sm col-4 selectunidad" name="unidad${servicio}" required>
-                    <option value="1">Unidad 1</option>
-                    <option value="2">Unidad 2</option>
-                    <option value="3">Unidad 3</option>
-                    <option value="4">Unidad 4</option>
+                <select id="unidad${elementid}" class="form-control form-control-sm col-4 selectunidad" name="unidad${servicio}" required onchange="{selectEquipo(${idtransportista}, this.value, ${elementid});}">
                 </select>
                 <div class="col-8 d-flex flex-row justify-content-between">
-                    <select class="form-control form-control-sm col-10 selectequipo" name="equipo${servicio}" required>
-                        <option value="1">Equipo 1</option>
-                        <option value="2">equipo 2</option>
-                        <option value="3">equipo 3</option>
-                        <option value="4">equipo 4</option>
+                    <select id="equipo${elementid}" class="form-control form-control-sm col-10 selectequipo" name="equipo${servicio}" required>
                     </select>
                     <i class="material-icons text-danger" style="cursor: pointer;" onClick="{$(this).parent().parent().remove();}">delete</i>
                 </div>
@@ -445,7 +481,7 @@
             <i class="material-icons" style="cursor:pointer;" onclick="addEquipo('${servicio}', this);">add_box</i>`;
 
             $('.equipocontainer').append(equipo);
-            getInventario(idtransportista);
+            getInventario(idtransportista, elementid);
         }
 
     function agregarCiudad(element) {
