--- a/KLS_WEB/KLS_WEB/Views/Travels/_Servicios.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/_Servicios.cshtml
@@ -24,7 +24,7 @@
                                 <div class="form-group row mr-3 my-auto">
                                     <label class="col-sm-3 col-form-label col-form-label-sm">COSTO</label>
                                     <div class="col-sm-9 my-auto">
-                                        <input type="text" class="form-control form-control-sm" id="costo" disabled>
+                                        <input type="number" class="form-control form-control-sm costos" name="terrestrenacionalcosto" onkeyup="{ setCostos(); }" required>
                                     </div>
                                 </div>
                                 <div class="form-group row my-auto">
